# language-helper

./: .gitignore  API_GUIDE.md  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  PROJECT_STATUS.md  PRONUNCIATION_ASSESSMENT.md  README.md  TAURI_MIGRATION_PLAN.md
app/: Cargo.toml
app/src/: config.rs  main.rs
backend/: Cargo.toml  README.md
backend/adapters/: Cargo.toml
backend/adapters/src/: input.rs  lib.rs  output.rs
backend/adapters/src/output/: ai.rs  persistence.rs  pronunciation.rs  speech.rs
backend/api/: Cargo.toml
backend/api/src/: app_api.rs
backend/api/src/apis/: mod.rs  system_requirements_api.rs
backend/api/src/models/: app_settings.rs  assistant_settings.rs  card_settings.rs  learning_session.rs  mod.rs  profile.rs  user.rs  user_settings.rs
backend/app/: Cargo.toml
backend/app/src/: main.rs
backend/application/: Cargo.toml
backend/application/src/: lib.rs  ports.rs  usecases.rs
backend/application/src/ports/: input.rs  output.rs
backend/application/src/usecases/: ai_settings.rs  card_catalog.rs  card_normalization.rs  card_speech.rs  language_profile.rs  local_user.rs  pronunciation_scoring.rs  pronunciation_settings.rs  study_session.rs
backend/application/tests/fixtures/: pronunciation_calibration.json
backend/bootstrap/: Cargo.toml
backend/bootstrap/src/: bridge.rs  config.rs  lib.rs
backend/core/: Cargo.toml
backend/core/src/api_impl/: ai_assistant_api_impl.rs  profiles_api_impl.rs  system_requirements_api_impl.rs
backend/core/src/models/: app_settings.rs  card.rs  profile.rs  user_settings.rs
backend/core/src/repositories/: mod.rs  profile_repository.rs  user_repository.rs  user_settings_repository.rs
backend/core/src/services/: app_settings_service.rs  mod.rs  ollama_client.rs  profile_service.rs  system_checker.rs  user_profiles_service.rs
backend/desktop/: Cargo.toml  Info.plist  tauri.conf.json
backend/desktop/capabilities/: default.json
backend/desktop/icons/: icon.icns
backend/desktop/src/: commands.rs  error.rs  lib.rs  main.rs  state.rs
backend/desktop/src/commands/: cards.rs  profiles.rs  sessions.rs  speech.rs  users.rs
backend/gui/: Cargo.toml
backend/gui/locales/bn-BD/: main.ftl
backend/gui/locales/en-US/: main.ftl
backend/gui/locales/fr-FR/: main.ftl
backend/gui/locales/hi-IN/: main.ftl
backend/gui/locales/it-IT/: main.ftl
backend/gui/locales/ja-JP/: main.ftl
backend/gui/locales/nl-NL/: main.ftl
backend/gui/locales/sv-SE/: main.ftl
backend/gui/locales/vi-VN/: main.ftl
backend/gui/src/: i18n.rs  lib.rs
backend/gui/src/routers/: mod.rs
backend/gui/src/states/: assistant_state.rs  profile_state.rs
backend/persistence/: Cargo.toml
backend/persistence/src/models/: card_entity.rs  (+2 more)
core/: Cargo.toml
core/src/: lib.rs
core/src/api_impl/: ai_assistant_api_impl.rs  app_api_impl.rs  app_settings_api_impl.rs  mod.rs  profiles_api_impl.rs  system_requirements_api_impl.rs  users_api_impl.rs
core/src/domain/: app_settings.rs  mod.rs  profile.rs  user.rs  user_settings.rs
core/src/errors/: mod.rs
core/src/models/: app_settings.rs  assistant_settings.rs  card.rs  card_filter.rs  card_settings.rs  learning_session.rs  mod.rs  profile.rs  test_result.rs  user.rs  user_settings.rs
core/src/repositories/: app_settings_repository.rs  mod.rs  profile_repository.rs  user_profiles_repository.rs  user_repository.rs  user_settings_repository.rs
core/src/services/: ai_provider.rs  app_settings_service.rs  learning_service.rs  mod.rs  ollama_client.rs  profile_service.rs  system_checker.rs  user_profiles_service.rs  user_service.rs  user_settings_service.rs
gui/: Cargo.toml
gui/locales/bn-BD/: main.ftl
gui/locales/de-DE/: main.ftl
gui/locales/en-US/: main.ftl
gui/locales/es-ES/: main.ftl
gui/locales/fr-FR/: main.ftl
gui/locales/hi-IN/: main.ftl
gui/locales/it-IT/: main.ftl
gui/locales/ja-JP/: main.ftl
gui/locales/ko-KR/: main.ftl
gui/locales/nl-NL/: main.ftl
gui/locales/pl-PL/: main.ftl
gui/locales/pt-BR/: main.ftl
gui/locales/ru-RU/: main.ftl
gui/locales/sv-SE/: main.ftl
gui/locales/th-TH/: main.ftl
gui/locales/tr-TR/: main.ftl
gui/locales/uk-UA/: main.ftl
gui/locales/vi-VN/: main.ftl
gui/locales/zh-CN/: main.ftl
gui/src/: app_gui.rs  app_state.rs  fonts.rs  gui_orchestrator.rs  i18n.rs  i18n_widgets.rs  iced_params.rs  languages.rs  lib.rs  main.rs  router.rs  runtime_util.rs
gui/src/components/: back_button.rs  mod.rs
gui/src/frames/: account_frame.rs  account_list_frame.rs  mod.rs
gui/src/mappers/: mod.rs  profile_mapper.rs  user_mapper.rs  user_settings_mapper.rs
gui/src/models/: assistant_settings_view.rs  card_settings_view.rs  card_view.rs  mod.rs  profile_settings_view.rs  profile_view.rs  user_profile_view.rs  user_settings_view.rs  user_view.rs
gui/src/routers/: _for_copy.rs  account_list_router.rs  account_router.rs  add_card_router.rs  assistant_settings_router.rs  card_settings_router.rs  cards_menu_router.rs  explain_ai_router.rs  inverse_cards_review_router.rs  manage_cards_router.rs  mock_api_stubs.txt  mod.rs  profile_list_router.rs  profile_router.rs  profile_settings_router.rs  user_list_router.rs  user_router.rs  user_settings_router.rs
gui/src/states/: assistant_state.rs  card_state.rs  mod.rs  profile_state.rs  user_state.rs
lh_mobile_bridge/: Cargo.toml  FFI_REFERENCE.md
lh_mobile_bridge/src/: ai_assistant_ffi.rs  app_settings_ffi.rs  common.rs  init.rs  lib.rs  memory.rs  profiles_ffi.rs  users_ffi.rs
persistence/: Cargo.toml
persistence/src/: lib.rs  sqlite_user_repository.rs
persistence/src/errors/: mod.rs
persistence/src/mappers/: app_settings_mapper.rs  mod.rs  profile_mapper.rs  user_mapper.rs  user_settings_mapper.rs
persistence/src/models/: app_settings_entity.rs  assistant_settings_entity.rs  card_entity.rs  mod.rs  profile_entity.rs  user_entity.rs  user_settings_entity.rs
persistence/src/repositories/: mod.rs  sqlite_app_settings_repository.rs  sqlite_profile_db_repository.rs  sqlite_profile_repository.rs  sqlite_user_repository.rs  sqlite_user_settings_repository.rs
(+257 files in other folders)
