[workspace]
members = ["api", "app", "core", "gui", "persistence"]
resolver = "3"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["ganzuk1998@gmail.com"]
description = "A simplified Rust library for vocabulary management with words, meanings, and translations"
license = "MIT OR Apache-2.0"
repository = "https://github.com/sponez/language-helper"
documentation = "https://docs.rs/language-helper"
keywords = ["vocabulary", "language", "translation", "dictionary", "linguistics"]
categories = ["data-structures", "text-processing"]
readme = "README.md"
exclude = ["target/*"]

[workspace.dependencies]
thiserror = "1"
serde = "1"
serde_json = "1"
chrono = "0.4"
tokio = { version = "1", features = ["rt", "rt-multi-thread", "sync", "macros", "process", "time"] }
async-trait = "0.1"
sysinfo = "0.30"
opener = "0.7"
reqwest = { version = "0.12", features = ["json", "blocking"] }
