[workspace]
members = [
    "adapters",
    "application",
    "bootstrap",
    "desktop",
]
resolver = "3"

[workspace.package]
version = "0.1.0"
edition = "2024"
authors = ["ganzuk1998@gmail.com"]
description = "A simplified Rust library for vocabulary management with words, meanings, and translations"
license = "MIT OR Apache-2.0"
repository = "https://github.com/sponez/language-helper"
documentation = "https://docs.rs/language-helper"
keywords = ["vocabulary", "language", "translation", "dictionary", "linguistics"]
categories = ["data-structures", "text-processing"]
readme = "README.md"
exclude = ["target/*"]

[workspace.dependencies]
thiserror = { version = "2.0.18", default-features = false }
serde = { version = "1", default-features = false, features = ["derive", "std"] }
serde_json = { version = "1", default-features = false, features = ["std"] }
chrono = { version = "0.4", default-features = false }
tokio = { version = "1.52.3", default-features = false, features = ["rt", "rt-multi-thread", "sync", "macros", "process", "time"] }
async-trait = { version = "0.1", default-features = false }
uuid = { version = "1", default-features = false, features = ["v4"] }
sysinfo = { version = "0.39.5", default-features = false }
opener = { version = "0.8.5", default-features = false }
reqwest = { version = "0.12", features = ["json", "blocking", "rustls-tls"], default-features = false }
