[package]
name = "gui"
version.workspace = true
edition.workspace = true

[dependencies]
lh_api = { path = "../api" }
lh_core = { path = "../core" }

iced = { version = "0.13", features = ["tokio", "lazy"] }
tokio = { workspace = true }
futures = "0.3"
once_cell = "1"
thiserror = { workspace = true }
fluent = "0.16"
fluent-bundle = "0.15"
fluent-syntax = "0.11"
unic-langid = "0.9"
intl-memoizer = "0.5"
chrono = { workspace = true }
