[package]
name = "lh_mobile_bridge"
version.workspace = true
edition.workspace = true
authors.workspace = true
description = "FFI bridge for Language Helper 2 mobile apps"
license.workspace = true
repository.workspace = true
documentation.workspace = true
keywords.workspace = true
categories.workspace = true
readme.workspace = true
exclude.workspace = true

[lib]
crate-type = ["cdylib", "staticlib"]  # cdylib for Android, staticlib for iOS

[dependencies]
# Internal dependencies - reuse existing crates!
lh_api = { path = "../api" }
lh_core = { path = "../core" }
lh_persistence = { path = "../persistence" }

# Async runtime
tokio = { version = "1.42", features = ["rt", "rt-multi-thread", "sync"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Database
rusqlite = { version = "0.37", features = ["bundled"] }

# Logging
log = "0.4"
