[package]
name = "lh_persistence"
version.workspace = true
edition.workspace = true

[dependencies]
lh_core = { path = "../core" }
rusqlite = { version = "0.37.0", features = ["bundled"] }
chrono = "0.4"
uuid = { version = "1.10", features = ["v4"] }
thiserror = { workspace = true }
tokio = { workspace = true }
async-trait = { workspace = true }

[dev-dependencies]
tempfile = "3.8"
