[package]
name = "adapters"
version.workspace = true
edition.workspace = true

[dependencies]
application = { path = "../application" }
rusqlite = { version = "0.37.0", features = ["bundled"] }
thiserror = { workspace = true }
tokio = { workspace = true }
async-trait = { workspace = true }

[dev-dependencies]
tempfile = "3.8"
