[package]
name = "adapters"
version.workspace = true
edition.workspace = true

[dependencies]
application = { path = "../application", default-features = false }
rusqlite = { version = "0.37.0", default-features = false, features = ["bundled"] }
thiserror = { workspace = true, default-features = false }
tokio = { workspace = true, default-features = false }
async-trait = { workspace = true, default-features = false }

[dev-dependencies]
tempfile = { version = "3.8", default-features = false }
