[package]
name = "app"
version.workspace = true
edition.workspace = true

[dependencies]
lh_api = { path = "../api" }
lh_core = { path = "../core" }
lh_persistence = { path = "../persistence" }
gui = { path = "../gui" }
iced = { git = "https://github.com/iced-rs/iced.git", features = ["tokio"] }
rusqlite = { version = "0.37.0", features = ["bundled"] }
