[package]
name = "application"
version.workspace = true
edition.workspace = true

[dependencies]
async-trait = { workspace = true, default-features = false }
thiserror = { workspace = true, default-features = false }
uuid = { workspace = true, default-features = false }
strsim = { workspace = true, default-features = false }

[dev-dependencies]
tokio = { workspace = true, default-features = false }
