[package]
name = "lh_desktop"
version.workspace = true
edition.workspace = true

[lib]
name = "lh_desktop"
crate-type = ["lib", "cdylib", "staticlib"]

[[bin]]
name = "language-helper"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", default-features = false, features = [] }

[dependencies]
application = { path = "../application", default-features = false }
lh_bootstrap = { path = "../bootstrap", default-features = false }
serde = { workspace = true, default-features = false }
tauri = { version = "2", default-features = false, features = ["wry"] }

[dev-dependencies]
async-trait = { workspace = true, default-features = false }
tempfile = { version = "3.8", default-features = false }
tokio = { workspace = true, default-features = false }
