[package]
name = "gui"
version.workspace = true
edition.workspace = true

[dependencies]
lh_api = { path = "../api" }
lh_core = { path = "../core" }

iced = { git = "https://github.com/iced-rs/iced.git", features = ["wgpu", "tiny-skia", "crisp", "web-colors", "thread-pool", "linux-theme-detection", "svg", "canvas", "qr_code", "markdown", "lazy", "tokio", "smol", "webgl", "advanced", "sipper"] }
tokio = { workspace = true }
futures = "0.3"
once_cell = "1"
thiserror = { workspace = true }
fluent = "0.16"
fluent-bundle = "0.15"
fluent-syntax = "0.11"
unic-langid = "0.9"
intl-memoizer = "0.5"
chrono = { workspace = true }
opener = { workspace = true }
